prepare public v0.4.0 foundation
